@@ -320,8 +320,9 @@ public class VFShell
 					}
 
 					@Override
-					public void sendGMCPEvent(final String eventName, final String json)
+					public boolean sendGMCPEvent(final String eventName, final String json)
 					{
+						return false;
 					}
 
 					@Override
